--- a/locales/de/filters.json
+++ b/locales/de/filters.json
@@ -61,7 +61,7 @@
 	},
 	{
 		"filter.16.name": "AdGuard — Französischer Filter",
-		"filter.16.description": "Liste FR + französischer AdGuard-Filter. Filter, der gezielt Werbung auf französischen Webseiten sperrt."
+		"filter.16.description": "Liste FR + französischer AdGuard-Filter. Filter, der gezielt Werbung auf französischen Websites sperrt."
 	},
 	{
 		"filter.17.name": "AdGuard — URL-Tracking-Filter",
@@ -69,67 +69,67 @@
 	},
 	{
 		"filter.224.name": "AdGuard — Chinesischer Filter",
-		"filter.224.description": "EasyList China + AdGuard Chinesischer Filter. Filterliste, die spezifisch Werbeanzeigen auf chinesischsprachigen Webseiten sperrt."
+		"filter.224.description": "EasyList China + AdGuard Chinesischer Filter. Filterliste, die spezifisch Werbeanzeigen auf chinesischsprachigen Websites sperrt."
 	},
 	{
 		"filter.101.name": "EasyList",
-		"filter.101.description": "EasyList ist die wichtigste Sperrliste, welche Werbung aus englischsprachigen Webseiten entfernt. (Bereits im AdGuard Basisfilter enthalten)"
+		"filter.101.description": "EasyList ist die wichtigste Sperrliste, die Werbung aus englischsprachigen Websites entfernt. (Bereits im AdGuard Basisfilter enthalten)."
 	},
 	{
 		"filter.102.name": "ABPindo",
-		"filter.102.description": "Ergänzungen zu EasyList für indonesische Webseiten."
+		"filter.102.description": "Ergänzungen zu EasyList für indonesische Websites."
 	},
 	{
 		"filter.103.name": "Bulgarische Liste",
-		"filter.103.description": "Ergänzungen zu EasyList für bulgarische Webseiten."
+		"filter.103.description": "Ergänzungen zu EasyList für bulgarische Websites."
 	},
 	{
 		"filter.104.name": "EasyList China",
-		"filter.104.description": "Ergänzungen zu EasyList für chinesische Webseiten."
+		"filter.104.description": "Ergänzungen zu EasyList für chinesische Websites."
 	},
 	{
 		"filter.105.name": "EasyList Czech and Slovak (Tschechien + Slowakei)",
-		"filter.105.description": "Ergänzungen zu EasyList für tschechischen und slowakischen Webseiten."
+		"filter.105.description": "Ergänzungen zu EasyList für tschechische und slowakische Websites."
 	},
 	{
 		"filter.106.name": "EasyList Niederländisch",
-		"filter.106.description": "Ergänzungen zu EasyList für niederländische Webseiten. Bereits im AdGuard Niederländisch-Filter enthalten."
+		"filter.106.description": "Ergänzungen zu EasyList für niederländische Websites. Bereits im AdGuard Niederländisch-Filter enthalten."
 	},
 	{
 		"filter.107.name": "EasyList Deutsch",
-		"filter.107.description": "Ergänzungen zu EasyList für deutschsprachige Webseiten. Bereits in AdGuard Deutscher Filter enthalten."
+		"filter.107.description": "Ergänzungen zu EasyList für deutschsprachige Websites. Bereits im AdGuard Deutsch-Filter enthalten."
 	},
 	{
 		"filter.108.name": "EasyList Hebräisch",
-		"filter.108.description": "Ergänzungen zu EasyList für hebräische Webseiten."
+		"filter.108.description": "Ergänzungen zu EasyList für hebräische Websites."
 	},
 	{
 		"filter.109.name": "EasyList Italienisch",
-		"filter.109.description": "Ergänzungen zu EasyList für italienische Webseiten."
+		"filter.109.description": "Ergänzungen zu EasyList für italienische Websites."
 	},
 	{
 		"filter.110.name": "EasyList Litauen",
-		"filter.110.description": "Ergänzungen zu EasyList für litauische Webseiten."
+		"filter.110.description": "Ergänzungen zu EasyList für litauische Websites."
 	},
 	{
 		"filter.111.name": "EasyList Lettland",
-		"filter.111.description": "Ergänzungen zu EasyList für lettische Webseiten."
+		"filter.111.description": "Ergänzungen zu EasyList für lettische Websites."
 	},
 	{
 		"filter.112.name": "Liste AR (Arabisch)",
-		"filter.112.description": "Ergänzungen zu EasyList für arabische Webseiten."
+		"filter.112.description": "Ergänzungen zu EasyList für arabische Websites."
 	},
 	{
 		"filter.113.name": "Liste FR (Französisch)",
-		"filter.113.description": "Ergänzungen zu EasyList für französische Webseiten. Bereits in AdGuard Französische Filter enthalten."
+		"filter.113.description": "Ergänzungen zu EasyList für französische Websites. Bereits im AdGuard Französisch-Filter enthalten."
 	},
 	{
 		"filter.114.name": "ROList",
-		"filter.114.description": "Ergänzungen zu EasyList für rumänische Webseiten."
+		"filter.114.description": "Ergänzungen zu EasyList für rumänische Websites."
 	},
 	{
 		"filter.115.name": "RU AdList (Russisch/Ukrainisch)",
-		"filter.115.description": "Ergänzungen zu EasyList für russische und ukrainische Webseiten."
+		"filter.115.description": "Ergänzungen zu EasyList für russische und ukrainische Websites."
 	},
 	{
 		"filter.118.name": "EasyPrivacy",
@@ -137,15 +137,15 @@
 	},
 	{
 		"filter.119.name": "Icelandic ABP List",
-		"filter.119.description": "Ergänzungen zu EasyList für isländische Webseiten."
+		"filter.119.description": "Ergänzungen zu EasyList für isländische Websites."
 	},
 	{
 		"filter.120.name": "AdBlockID",
-		"filter.120.description": "Ergänzungen zu EasyList und AdGuard Basisfilter für indonesische Webseiten."
+		"filter.120.description": "Ergänzungen zu EasyList und AdGuard Basisfilter für indonesische Websites."
 	},
 	{
 		"filter.121.name": "Greek AdBlock Filter (Griechisch)",
-		"filter.121.description": "Ergänzungen zu EasyList für griechische Webseiten."
+		"filter.121.description": "Ergänzungen zu EasyList für griechische Websites."
 	},
 	{
 		"filter.122.name": "Fanboy's Annoyances (Belästigungen)",
@@ -173,7 +173,7 @@
 	},
 	{
 		"filter.206.name": "Xfiles (Italieisch)",
-		"filter.206.description": "Adblock-Filterliste zum Sperren von Werbung auf italienischen Webseiten."
+		"filter.206.description": "Italienische Filterliste zur Werbeblockierung."
 	},
 	{
 		"filter.207.name": "Adblock Warning Removal List (AdBlock-Warnhinweise entfernen)",
@@ -205,7 +205,7 @@
 	},
 	{
 		"filter.216.name": "Offizieller polnischer Filter für AdBlock, uBlock Origin und AdGuard",
-		"filter.216.description": "Ergänzungen zu EasyList für polnische Webseiten."
+		"filter.216.description": "Ergänzungen zu EasyList für polnische Websites."
 	},
 	{
 		"filter.217.name": "Polskie Filtry Ciasteczkowe (Polnischer Cookie-Filter)",
@@ -233,7 +233,7 @@
 	},
 	{
 		"filter.223.name": "Fanboy's Swedish",
-		"filter.223.description": "Filterliste für schwedische Webseiten."
+		"filter.223.description": "Filterliste für schwedische Websites."
 	},
 	{
 		"filter.225.name": "Fanboy's Anti-Facebook List",
@@ -241,7 +241,7 @@
 	},
 	{
 		"filter.226.name": "Fanboy's Vietnamese",
-		"filter.226.description": "Filterliste für vietnamesische Webseiten."
+		"filter.226.description": "Filterliste für vietnamesische Websites."
 	},
 	{
 		"filter.227.name": "List-KR (Korea)",
@@ -257,19 +257,19 @@
 	},
 	{
 		"filter.230.name": "Fanboy's Spanish/Portuguese",
-		"filter.230.description": "Filterliste für spanische und portugiesische Webseiten."
+		"filter.230.description": "Filterliste für spanische und portugiesische Websites."
 	},
 	{
 		"filter.231.name": "EasyList Spanish (Spanien)",
-		"filter.231.description": "Ergänzungen zu EasyList für spanische Webseiten."
+		"filter.231.description": "Ergänzungen zu EasyList für spanische Websites."
 	},
 	{
 		"filter.232.name": "KAD - Przekręty (Betrügereien/Polen)",
-		"filter.232.description": "Filter, der vor verschiedenen Arten von Betrug schützt, z.B. Massen-SMS, gefälschte Online-Shops usw."
+		"filter.232.description": "Filter zum Schutz vor verschiedenen Arten von Betrug im polnischen Netz, darunter Massen-SMS, gefälschte Online-Shops usw."
 	},
 	{
 		"filter.233.name": "Adblock Filterliste für Finnland",
-		"filter.233.description": "Filterliste zum Sperren von Werbung auf finnischen Webseiten."
+		"filter.233.description": "Finnische Filterliste für Werbeblockierung."
 	},
 	{
 		"filter.234.name": "ROLIST2 (Rumänien)",
@@ -289,7 +289,7 @@
 	},
 	{
 		"filter.238.name": "Anti-Adblock-Filter auf polnischen Websites",
-		"filter.238.description": "Entfernt Warnhinweise auf polnischen Webseiten, die angeben, dass ein Werbeblocker erkannt wurde."
+		"filter.238.description": "Offizielle polnische Filter gegen Adblock-Warnhinweise."
 	},
 	{
 		"filter.239.name": "Fanboy's Anti-thirdparty Fonts (Schriften von Drittanbietern)",
