--- a/locales/de/tags.json
+++ b/locales/de/tags.json
@@ -1,19 +1,19 @@
 [
 	{
-		"tag.64.description": "Erstellt zum Sperren von Werbung auf thailändischen Webseiten",
-		"tag.64.name": "Sperren von Werbung auf thailändischen Webseiten"
+		"tag.64.description": "Erstellt zum Sperren von Werbung auf thailändischen Websites",
+		"tag.64.name": "Sperren von Werbung auf thailändischen Websites"
 	},
 	{
-		"tag.63.description": "Erstellt zum Sperren von Werbung auf färöischen Webseiten",
-		"tag.63.name": "Sperren von Werbung auf färöischsprachigen Webseiten"
+		"tag.63.description": "Erstellt zum Sperren von Werbung auf färöischen Websites",
+		"tag.63.name": "Sperren von Werbung auf färöischsprachigen Websites"
 	},
 	{
-		"tag.30.description": "Erstellt zum Sperren von Werbung auf bulgarischen Webseiten",
-		"tag.30.name": "Sperren von Werbung auf bulgarischen Webseiten"
+		"tag.30.description": "Erstellt zum Sperren von Werbung auf bulgarischen Websites",
+		"tag.30.name": "Sperren von Werbung auf bulgarischen Websites"
 	},
 	{
-		"tag.29.description": "Erstellt zum Sperren von Werbung auf indonesischen Webseiten",
-		"tag.29.name": "Sperren von Werbung auf indonesischsprachigen Webseiten"
+		"tag.29.description": "Erstellt zum Sperren von Werbung auf indonesischen Websites",
+		"tag.29.name": "Sperren von Werbung auf indonesischsprachigen Websites"
 	},
 	{
 		"tag.62.description": "Basiert auf dem Polnischen Belästigungsfilter",
@@ -32,7 +32,7 @@
 		"tag.6.name": "Sperren von Cookie-Benachrichtigungen"
 	},
 	{
-		"tag.7.description": "Speziell erstellt, um Werbung auf englischsprachigen Webseiten zu sperren",
+		"tag.7.description": "Erstellt zum Sperren von Werbung auf englischsprachigen Websites",
 		"tag.7.name": "Sperren von Werbung auf englischsprachigen Webseiten"
 	},
 	{
@@ -197,7 +197,7 @@
 	},
 	{
 		"tag.47.description": "Erstellt zum Sperren von Werbung auf tschechischen Webseiten",
-		"tag.47.name": "Sperren von Werbung auf tschechischsprachigen Webseiten"
+		"tag.47.name": "Sperren von Werbung auf tschechischsprachigen Websites"
 	},
 	{
 		"tag.48.description": "Erstellt zum Sperren von Werbung auf ungarischen Webseiten",
@@ -216,24 +216,24 @@
 		"tag.51.name": "Sperren von Cookie-Benachrichtigungen"
 	},
 	{
-		"tag.52.description": "Erstellt zum Sperren von Werbung auf vietnamesischen Webseiten",
-		"tag.52.name": "Sperren von Werbung auf vietnamesischsprachigen Webseiten"
+		"tag.52.description": "Erstellt zum Sperren von Werbung auf vietnamesischen Websites",
+		"tag.52.name": "Sperren von Werbung auf vietnamesischsprachigen Websites"
 	},
 	{
-		"tag.53.description": "Erstellt zum Sperren von Werbung auf estnischen Webseiten",
-		"tag.53.name": "Sperren von Werbung auf estnischsprachigen Webseiten"
+		"tag.53.description": "Erstellt zum Sperren von Werbung auf estnischen Websites",
+		"tag.53.name": "Sperren von Werbung auf estnischsprachigen Websites"
 	},
 	{
-		"tag.54.description": "Erstellt zum Sperren von Werbung auf persischsprachigen Webseiten",
-		"tag.54.name": "Sperren von Werbung auf persischsprachigen Webseiten"
+		"tag.54.description": "Erstellt zum Sperren von Werbung auf persischsprachigen Websites",
+		"tag.54.name": "Sperren von Werbung auf persischsprachigen Websites"
 	},
 	{
-		"tag.55.description": "Erstellt zum Sperren von Werbung auf schwedischen Webseiten",
-		"tag.55.name": "Sperren von Werbung auf schwedischsprachigen Webseiten"
+		"tag.55.description": "Erstellt zum Sperren von Werbung auf schwedischen Websites",
+		"tag.55.name": "Sperren von Werbung auf schwedischsprachigen Websites"
 	},
 	{
-		"tag.56.description": "Erstellt zum Sperren von Werbung auf koreanischen Webseiten",
-		"tag.56.name": "Sperren von Werbung auf koreanischsprachigen Webseiten"
+		"tag.56.description": "Erstellt zum Sperren von Werbung auf koreanischen Websites",
+		"tag.56.name": "Sperren von Werbung auf koreanischsprachigen Websites"
 	},
 	{
 		"tag.57.description": "Basiert auf dem Filter ROList",
