--- a/locales/he/filters.json
+++ b/locales/he/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti-Scam",
-		"filter.232.description": "מסנן אשר מגן עליך מפני סוגים שונים של הונאות, כמו תכתובות טקסט המוניות, חנויות מקוונות מזויפות, וכדומה."
+		"filter.232.description": "מסנן שמגן מפני סוגים שונים של הונאות ברשת הפולנית, כמו תכתובות טקסט המוניות, חנויות מקוונות מזויפות, וכדומה."
 	},
 	{
 		"filter.233.name": "Adblock List for Finland",
