--- a/locales/it/filters.json
+++ b/locales/it/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti-Scam",
-		"filter.232.description": "Filtro che protegge da vari tipi di truffe, come messaggi di testo di massa, falsi negozi online, ecc."
+		"filter.232.description": "Filtro che protegge da vari tipi di truffe nella rete polacca, come messaggi di testo di massa, falsi negozi online, ecc."
 	},
 	{
 		"filter.233.name": "Lista Blocca-Annunci finlandese",
