--- a/locales/ko/filters.json
+++ b/locales/ko/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD-사기 방지",
-		"filter.232.description": "자동 문자 메시지, 가짜 온라인 상점 등과 같은 다양한 유형의 사기로부터 보호하는 필터입니다."
+		"filter.232.description": "자동 문자 메시지, 가짜 온라인 상점 등과 같은 폴란드 네트워크의 다양한 유형의 사기로부터 보호하는 필터입니다."
 	},
 	{
 		"filter.233.name": "핀란드의 광고 차단 목록",
