--- a/locales/uk/filters.json
+++ b/locales/uk/filters.json
@@ -213,7 +213,7 @@
 	},
 	{
 		"filter.218.name": "Estonian List",
-		"filter.218.description": "Фільтр для блокування реклами на естонський сайтах."
+		"filter.218.description": "Фільтр для блокування реклами на сайтах естонською мовою."
 	},
 	{
 		"filter.219.name": "ChinaList+EasyList",
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti-Scam",
-		"filter.232.description": "Фільтр, який захищає від різних видів шахрайства, наприклад, масові текстові повідомлення, шахрайські інтернет-магазини тощо."
+		"filter.232.description": "Фільтр, який захищає від різних видів шахрайства на сайтах польською мовою, наприклад, масові текстові повідомлення, шахрайські інтернет-магазини тощо."
 	},
 	{
 		"filter.233.name": "Adblock List for Finland",
@@ -325,7 +325,7 @@
 	},
 	{
 		"filter.247.name": "Польське спеціальне доповнення проти подразників",
-		"filter.247.description": "Фільтри, які блокують і приховують елементи RSS та рештки прихованих розсилок новин, об'єднані з соціальними елементами на польських вебсайтах."
+		"filter.247.description": "Фільтри, які блокують і приховують RSS-елементи та залишки прихованих розсилок та соціальних елементів на сайтах польською мовою."
 	},
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
