--- a/locales/zh/filters.json
+++ b/locales/zh/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti-Scam",
-		"filter.232.description": "防范各种类型诈骗的过滤器，如群发短信、假冒的网上商店，等等。"
+		"filter.232.description": "在波兰网络上防范各种类型诈骗的过滤器，如群发短信、假冒的网上商店等等。"
 	},
 	{
 		"filter.233.name": "用于芬兰的 Adblock 列表",
