--- a/locales/zh_TW/filters.json
+++ b/locales/zh_TW/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti-Scam",
-		"filter.232.description": "保護您防備諸如大量的文字訊息、虛假的線上商店等等的各種樣式的詐騙之過濾器。"
+		"filter.232.description": "保護您防備諸如大量的文字訊息、虛假的線上商店等等在波蘭網路裡的各種樣式的詐騙之過濾器。"
 	},
 	{
 		"filter.233.name": "Adblock List for Finland",
