--- a/locales/es/filters.json
+++ b/locales/es/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti-Scam",
-		"filter.232.description": "Filtro que protege contra varios tipos de estafas, como mensajes de texto masivos, tiendas en línea falsas, etc."
+		"filter.232.description": "Filtro que protege contra varios tipos de estafas en la red polaca, como mensajes de texto masivos, tiendas en línea falsas, etc."
 	},
 	{
 		"filter.233.name": "Lista Adblock para Finlandia",
