--- a/locales/fi/filters.json
+++ b/locales/fi/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti-Scam",
-		"filter.232.description": "Suodatin, joka suojaa erilaisilta huijauksilta, kuten massatekstiviesteiltä, verkkokauppaväärennyksiltä, yms."
+		"filter.232.description": "Suodatin, joka suojaa puolankielisillä sivustoilla erilaisilta huijauksilta, kuten massatekstiviesteiltä, verkkokauppaväärennyksiltä, yms."
 	},
 	{
 		"filter.233.name": "Adblock List for Finland",
