--- a/locales/fr/filters.json
+++ b/locales/fr/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti-Scam",
-		"filter.232.description": "Filtre qui protège contre divers types d'escroqueries, comme la messagerie texte de masse, les faux magasins en ligne, etc."
+		"filter.232.description": "Filtre qui protège contre divers types d'escroqueries sur le réseau polonais, comme la messagerie texte de masse, les faux magasins en ligne, etc."
 	},
 	{
 		"filter.233.name": "Liste Adblock pour la Finlande",
