--- a/locales/ja/filters.json
+++ b/locales/ja/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti-Scam",
-		"filter.232.description": "大量のテキストメッセージ送信、偽オンラインストアなど、様々な種類の詐欺から保護するフィルター。"
+		"filter.232.description": "大量のテキストメッセージ送信、偽オンラインストアなど、ポーランド語ネットワークでの様々な種類の詐欺から保護するフィルター。"
 	},
 	{
 		"filter.233.name": "Adblock List for Finland",
