--- a/locales/pl/filters.json
+++ b/locales/pl/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - stop przekrętom",
-		"filter.232.description": "Filtr chroniący przed różnego rodzaju oszustwami, takimi jak masowe wysyłanie wiadomości tekstowych, fałszywe sklepy internetowe itp."
+		"filter.232.description": "Filtr chroniący przed różnego rodzaju oszustwami w polskiej sieci, takimi jak masowe wysyłanie Sms-ów, fałszywe sklepy internetowe itp."
 	},
 	{
 		"filter.233.name": "Adblock List dla Finlandii",
