--- a/locales/ru/filters.json
+++ b/locales/ru/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti-Scam",
-		"filter.232.description": "Фильтр, который защищает от разных видов мошенничества, таких как массовые рассылки, фейковые онлайн-магазины и так далее."
+		"filter.232.description": "Фильтр, который защищает от разных видов мошенничества в польской сети, таких как массовые рассылки, фейковые онлайн-магазины и так далее."
 	},
 	{
 		"filter.233.name": "Adblock List for Finland",
