--- a/locales/be/filters.json
+++ b/locales/be/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti-Scam",
-		"filter.232.description": "Фільтр, які бароніць ад розных выглядаў махлярства, такіх як масавыя рассыланні, фэйкавыя анлайн-крамы і гэтак далей."
+		"filter.232.description": "Фільтр, які бароніць ад розных выглядаў махлярства ў польскiм сецiве, такіх як масавыя рассыланні, фэйкавыя анлайн-крамы і гэтак далей."
 	},
 	{
 		"filter.233.name": "Adblock спіс для Фінляндыі",
