--- a/locales/da/filters.json
+++ b/locales/da/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti-Scam",
-		"filter.232.description": "Filter, der beskytter mod forskellige typer svindel, såsom massetekstmeddelelser, falske onlinebutikker mv."
+		"filter.232.description": "Filter, der beskytter mod forskellige typer svindeli det polske netværk, såsom masse-SMS'er, falske onlinebutikker mv."
 	},
 	{
 		"filter.233.name": "Adblock-liste for Finland",
