--- a/locales/it/tags.json
+++ b/locales/it/tags.json
@@ -16,8 +16,8 @@
 		"tag.29.name": "Blocca-annunci specifico per la lingua indonesiana"
 	},
 	{
-		"tag.62.description": "Ha riferimenti al Filtro disturbatori polacchi",
-		"tag.62.name": "Riferimento al Filtro disturbatori polacchi"
+		"tag.62.description": "Ha riferimenti al Filtro Fastidi polacco",
+		"tag.62.name": "Riferimento al Filtro Fastidi polacco"
 	},
 	{
 		"tag.3.description": "Progettato per bloccare gli elementi dei social media (widget, pulsanti \"Mi piace\", ecc.)",
@@ -57,7 +57,7 @@
 	},
 	{
 		"tag.5.description": "Progettato per bloccare elementi non pubblicitari che ti distraggono dal contenuto (offerte di abbonamento, avvisi di promozione ecc.).",
-		"tag.5.name": "Protezione contro i fastidi"
+		"tag.5.name": "Protezione anti-fastidio"
 	},
 	{
 		"tag.11.description": "Ha riferimenti al filtro base di AdGuard",
@@ -92,7 +92,7 @@
 		"tag.18.name": "Blocca-annunci specifico per lingua portoghese"
 	},
 	{
-		"tag.19.description": "Progettato appositamente per bloccare annunci e traccianti su dispositivi mobile",
+		"tag.19.description": "Progettato appositamente per bloccare annunci e traccianti su dispositivi mobili",
 		"tag.19.name": "Per dispositivi mobili"
 	},
 	{
@@ -120,8 +120,8 @@
 		"tag.25.name": "Riferimento del filtro Protezione Antitracciamento"
 	},
 	{
-		"tag.26.description": "Ha riferimenti al filtro Annunci per Dispositivi Mobili",
-		"tag.26.name": "Riferimento del filtro Annunci per Dispositivi Mobili"
+		"tag.26.description": "Ha riferimenti al filtro Annunci Mobili",
+		"tag.26.name": "Riferimento filtro per Annunci Mobili"
 	},
 	{
 		"tag.27.description": "Progettato appositamente per bloccare gli annunci sulle pagine web in lingua francese",
