--- a/locales/nl/filters.json
+++ b/locales/nl/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti-Scam",
-		"filter.232.description": "Filter dat je beschermt tegen verschillende soorten oplichting, zoals massale text berichtgeving, valse online winkels, enz."
+		"filter.232.description": "Filter dat beschermt tegen verschillende soorten oplichting binnen het Poolse netwerk, zoals massale tekst berichtgeving, valse online winkels, enz."
 	},
 	{
 		"filter.233.name": "Adblock Lijst voor Finland",
