--- a/locales/sl/filters.json
+++ b/locales/sl/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - proti prevaram",
-		"filter.232.description": "Filter, ki ščiti pred različnimi vrstami prevar, kot so množično pošiljanje besedilnih sporočil, lažne spletne trgovine itd."
+		"filter.232.description": "Filter, ki ščiti pred različnimi vrstami prevar v poljskem omrežju, kot so množična besedilna sporočila, lažne spletne trgovine itd."
 	},
 	{
 		"filter.233.name": "Seznam zaviranja oglasov za Finsko",
