--- a/locales/hr/filters.json
+++ b/locales/hr/filters.json
@@ -330,5 +330,13 @@
 	{
 		"filter.249.name": "Dandelion Sprout's Nordic Filters",
 		"filter.249.description": "Ovaj popis obuhvaća web stranice za Norvešku, Dansku, Island, danske teritorije i autohtono stanovništvo Sama."
+	},
+	{
+		"filter.250.name": "Dandelion Sprout's popis iritirajućih elemenata",
+		"filter.250.description": "Ovaj je popis napravljen u stilu AdGuardovih i Fanboyevih popisa iritirajućih elemenata. Isti kombinira više Dandelion Sprout's poznatih i često obnavljanih popisa, kao pročišćeni popis zarad jednostavnosti."
+	},
+	{
+		"filter.251.name": "Legitimni skračivać adresa",
+		"filter.251.description": "Automatski uklanja nepotrebne znakove '$' '&' iz adresa, čineći ih tako lakšim za kopiranje iz adresne trake i ljepljenjem istih bilo gdje kao poveznice."
 	}
 ]
