--- a/locales/it/filters.json
+++ b/locales/it/filters.json
@@ -4,11 +4,11 @@
 		"filter.1.description": "Filtro che attiva il blocca-annunci sui siti web in lingua russa."
 	},
 	{
-		"filter.2.name": "Filtro base AdGuard",
-		"filter.2.description": "EasyList + Filtro base AdGuard. Questo filtro è necessario per un filtraggio di qualità degli annunci."
+		"filter.2.name": "Filtro Base AdGuard",
+		"filter.2.description": "EasyList + filtro Base AdGuard. Questo filtro è necessario per un filtraggio di qualità degli annunci."
 	},
 	{
-		"filter.3.name": "Filtro Protezione Antitracciamento",
+		"filter.3.name": "Filtro AdGuard Protezione Antitracciamento",
 		"filter.3.description": "L'elenco più esaustivo dei vari contatori e analizzatori del traffico di rete. Utilizza questo filtro, se non vuoi che le tue azioni su Internet vengano monitorate."
 	},
 	{
@@ -21,7 +21,7 @@
 	},
 	{
 		"filter.6.name": "Filtro tedesco",
-		"filter.6.description": "EasyList Germany + Filtro Tedesco AdGuard. Elenco di filtri che rimuove specificatamente gli annunci sui siti web in lingua tedesca."
+		"filter.6.description": "EasyList Germany + Filtro tedesco. Elenco di filtri che rimuove specificatamente gli annunci sui siti web in lingua tedesca."
 	},
 	{
 		"filter.7.name": "Filtro giapponese",
@@ -29,7 +29,7 @@
 	},
 	{
 		"filter.8.name": "Filtro olandese",
-		"filter.8.description": "EasyList Dutch + Filtro Olandese AdGuard. Elenco di filtri che rimuove specificatamente gli annunci sui siti web in lingua olandese."
+		"filter.8.description": "EasyList Dutch + Filtro olandese. Elenco di filtri che rimuove specificatamente gli annunci sui siti web in lingua olandese."
 	},
 	{
 		"filter.9.name": "Filtro spagnolo/portoghese",
@@ -40,7 +40,7 @@
 		"filter.10.description": "Filtro che sblocca le ricerche (Duckduckgo, Google, Bing, Yahoo) e gli annunci autopromozionali. Definizione di autopromozione: quando un annuncio su un sito web promuove quello stesso sito o altri siti/social media/ecc. strettamente correlati ad esso, tale annuncio è considerato autopromozionale."
 	},
 	{
-		"filter.11.name": "Filtro Annunci per Dispositivi Mobili",
+		"filter.11.name": "Filtro AdGuard per Annunci Mobili",
 		"filter.11.description": "Filtro per tutte le reti di annunci mobile conosciute. Utile per dispositivi portatili."
 	},
 	{
@@ -48,28 +48,28 @@
 		"filter.12.description": "Speciale filtro per Safari 9+ su iOS e macOS. Abbiamo bisogno di un filtro separato per Safari perché esso non supporta pienamente la sintassi delle nostre regole."
 	},
 	{
-		"filter.13.name": "Filtro turco AdGuard",
+		"filter.13.name": "Filtro AdGuard turco AdGuard",
 		"filter.13.description": "Elenco di filtri che rimuove specificatamente gli annunci sui siti web in lingua turca."
 	},
 	{
-		"filter.14.name": "Filtro Disturbatori AdGuard",
+		"filter.14.name": "Filtro AdGuard Anti-Fastidio",
 		"filter.14.description": "Blocca gli elementi irritanti sulle pagine web inclusi avvisi sui cookie, widget di terze parti e pop-up interni alla pagina."
 	},
 	{
-		"filter.15.name": "Filtro DSN di Adguard",
+		"filter.15.name": "Filtro DNS di AdGuard",
 		"filter.15.description": "Filtro composto da molti altri (Filtro base di AdGuard, Filtro social media, Filtro annunci per dispositivi, EasyList e EasyPrivacy); semplificato specificatamente per essere maggiormente compatibile con il blocca-annunci a livello DNS."
 	},
 	{
 		"filter.16.name": "Filtro francese",
-		"filter.16.description": "Lista FR + Filtro Francese di Adguard. Filtro che rimuove specificatamente annunci sui siti web in lingua francese."
+		"filter.16.description": "Lista FR + Filtro francese. Filtro che rimuove specificatamente annunci sui siti web in lingua francese."
 	},
 	{
 		"filter.17.name": "Filtro AdGuard URL Tracking",
 		"filter.17.description": "Filtro che incrementa la privacy rimuovendo i parametri di tracciamento dagli URL."
 	},
 	{
-		"filter.224.name": "Filtro cinese AdGuard",
-		"filter.224.description": "EasyList China + Filtro Cinese AdGuard. La lista di filtri per la rimozione specifica di annunci su siti web in lingua cinese."
+		"filter.224.name": "Filtro AdGuard cinese",
+		"filter.224.description": "EasyList China + Filtro cinese. La lista di filtri per la rimozione specifica di annunci su siti web in lingua cinese."
 	},
 	{
 		"filter.101.name": "EasyList",
@@ -148,12 +148,12 @@
 		"filter.121.description": "Supplemento greco per EasyList."
 	},
 	{
-		"filter.122.name": "Fanboy's Annoyances",
-		"filter.122.description": "Rimuove i pop-up interni alla pagina ed altri elementi irritanti. Include Fanboy's Social Blocking e Lista Cookie EasyList."
+		"filter.122.name": "Anti-Fastidio Fanboy",
+		"filter.122.description": "Rimuove i pop-up interni alla pagina ed altri elementi irritanti. Include Blocco Social Fanboy e Lista Cookie EasyList."
 	},
 	{
-		"filter.123.name": "Lista Fanboy's Social Blocking",
-		"filter.123.description": "Nasconde e blocca i contenuti social, come: widget, script e icone. Già incluso nella lista Fanboy's Annoyances."
+		"filter.123.name": "Lista Blocco Social Fanboy",
+		"filter.123.description": "Nasconde e blocca i contenuti social, come: widget, script e icone. Già incluso nella lista Anti-Fastidio Fanboy."
 	},
 	{
 		"filter.201.name": "Web Annoyance Ultralist",
@@ -220,7 +220,7 @@
 		"filter.219.description": "Elenco blocca-annunci per la cina. Si noti che in realtà esso non include EasyList."
 	},
 	{
-		"filter.220.name": "Lista CJX's Annoyances",
+		"filter.220.name": "Lista Anti-Fastidio CJX",
 		"filter.220.description": "Supplemento per EasyList China + EasyList e EasyPrivacy."
 	},
 	{
@@ -284,7 +284,7 @@
 		"filter.236.description": "Sottoscrizione al filtro di blocca-annunci in lingua rumena."
 	},
 	{
-		"filter.237.name": "Filtri disturbatori polacchi",
+		"filter.237.name": "Filtri Anti-Fastidio polacco",
 		"filter.237.description": "Elenco di filtri che nasconde e blocca pop-up, widget, newsletter, notifiche push, frecce, collegamenti interni con tag fuori tema e altri elementi irritanti. I filtri polacchi GDPR-Cookie sono già inclusi."
 	},
 	{
@@ -301,7 +301,7 @@
 	},
 	{
 		"filter.241.name": "Lista Cookie EasyList",
-		"filter.241.description": "Rimuove cookie e avvisi sulla privacy. Già incluso nella lista Fanboy's Annoyances."
+		"filter.241.description": "Rimuove cookie e avvisi sulla privacy. Già incluso nella lista Anti-Fastidio Fanboy."
 	},
 	{
 		"filter.242.name": "Lista NoCoin Filter",
@@ -332,8 +332,8 @@
 		"filter.249.description": "Questa lista copre i siti web per Norvegia, Danimarca, Islanda, territori olandesi e popolazione indigena Sami."
 	},
 	{
-		"filter.250.name": "Lista Dandelion Sprout Annoyances",
-		"filter.250.description": "Questa lista è realizzata nel medesimo stile degli elenchi AdGuard Fanboy Annoyances. Combina molti degli elenchi internazionali più fieri e sottoposti a frequente manutenzione da parte di Dandelion Sprout, come raccolta curata e contraddistinta della semplicità."
+		"filter.250.name": "Lista Anti-Fastidio Dandelion Sprout",
+		"filter.250.description": "Questa lista è realizzata nel medesimo stile degli elenchi AdGuard Anti-Fastidio Fanboy. Combina molti degli elenchi internazionali più fieri e sottoposti a frequente manutenzione da parte di Dandelion Sprout, come raccolta curata e contraddistinta della semplicità."
 	},
 	{
 		"filter.251.name": "Legitimate URL Shortener",
