--- a/locales/pt_PT/filters.json
+++ b/locales/pt_PT/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti Golpe",
-		"filter.232.description": "Filtro que protege contra vários tipos de golpes, como mensagens de texto em massa, lojas online falsas, etc."
+		"filter.232.description": "Filtro que protege contra vários tipos de golpes em redes polonesas, como mensagens de texto em massa, lojas online falsas, etc."
 	},
 	{
 		"filter.233.name": "Lista de bloqueio de publicidade para Finlândia",
