--- a/locales/fi/groups.json
+++ b/locales/fi/groups.json
@@ -12,7 +12,7 @@
 		"group.7.name": "Kielikohtaiset"
 	},
 	{
-		"group.1.name": "Mainosten estäminen"
+		"group.1.name": "Mainosesto"
 	},
 	{
 		"group.2.name": "Tietosuoja"
