--- a/locales/fi/tags.json
+++ b/locales/fi/tags.json
@@ -45,7 +45,7 @@
 	},
 	{
 		"tag.1.description": "Designed to block ads online",
-		"tag.1.name": "Ad Blocking"
+		"tag.1.name": "Mainosesto"
 	},
 	{
 		"tag.4.description": "Suunniteltu suojaamaan sinua haitallisilta ja vaarallisilta verkkosivustoilta",
