--- a/locales/it/tags.json
+++ b/locales/it/tags.json
@@ -1,18 +1,18 @@
 [
 	{
-		"tag.64.description": "Progettato specificamente per bloccare gli annunci sulle pagine web in lingua tailandese",
+		"tag.64.description": "Progettato specificamente per il blocco degli annunci su pagine web in lingua tailandese",
 		"tag.64.name": "Blocca-annunci specifico in lingua tailandese"
 	},
 	{
-		"tag.63.description": "Progettato appositamente per bloccare gli annunci su pagine web in lingua faroese",
+		"tag.63.description": "Progettato specificamente per il blocco degli annunci su pagine web in lingua faroese",
 		"tag.63.name": "Blocca-annunci specifico per la lingua faroese"
 	},
 	{
-		"tag.30.description": "Progettato appositamente per bloccare gli annunci su pagine web in lingua bulgara",
+		"tag.30.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua bulgara",
 		"tag.30.name": "Blocca-annunci specifico per la lingua bulgara"
 	},
 	{
-		"tag.29.description": "Progettato appositamente per bloccare gli annunci su pagine web in linguaindonesiana",
+		"tag.29.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua indonesiana",
 		"tag.29.name": "Blocca-annunci specifico per la lingua indonesiana"
 	},
 	{
@@ -21,7 +21,7 @@
 	},
 	{
 		"tag.3.description": "Progettato per bloccare gli elementi dei social media (widget, pulsanti \"Mi piace\", ecc.)",
-		"tag.3.name": "Blocco dei widget sociali"
+		"tag.3.name": "Blocco dei widget social"
 	},
 	{
 		"tag.9.description": "Ha riferimenti al filtro EasyList",
@@ -32,15 +32,15 @@
 		"tag.6.name": "Blocco degli avvisi sui cookie"
 	},
 	{
-		"tag.7.description": "Progettato appositamente per bloccare gli annunci su pagine web in lingua inglese",
+		"tag.7.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua inglese",
 		"tag.7.name": "Blocca-annunci specifico per lingua inglese"
 	},
 	{
-		"tag.2.description": "Progettato per proteggere la tua privacy online bloccando traccianti e sistemi analitici",
+		"tag.2.description": "Progettato per proteggere la tua privacy online bloccando tracciatori e statistiche",
 		"tag.2.name": "Protezione della privacy"
 	},
 	{
-		"tag.8.description": "Progettato appositamente per bloccare gli annunci su pagine web in lingua russa",
+		"tag.8.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua russa",
 		"tag.8.name": "Blocca-annunci specifico per la lingua russa"
 	},
 	{
@@ -64,7 +64,7 @@
 		"tag.11.name": "Riferimento del filtro base di AdGuard"
 	},
 	{
-		"tag.12.description": "Progettato appositamente per bloccare gli annunci nelle pagine web in lingua tedesca",
+		"tag.12.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua tedesca",
 		"tag.12.name": "Blocca-annunci specifico per la lingua tedesca"
 	},
 	{
@@ -72,11 +72,11 @@
 		"tag.13.name": "Riferimento al filtro EasyList tedesco"
 	},
 	{
-		"tag.14.description": "Progettato appositamente per bloccare annunci su pagine web in lingua giapponese",
+		"tag.14.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua giapponese",
 		"tag.14.name": "Blocca-annunci specifico per lingua giapponese"
 	},
 	{
-		"tag.15.description": "Progettato appositamente per bloccare annunci su pagine web in lingua olandese",
+		"tag.15.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua olandese",
 		"tag.15.name": "Blocca-annunci specifico per lingua olandese"
 	},
 	{
@@ -84,15 +84,15 @@
 		"tag.16.name": "Riferimento del filtro EasyList Dutch"
 	},
 	{
-		"tag.17.description": "Progettato appositamente per bloccare gli annunci sulle pagine web in lingua spagnola",
+		"tag.17.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua spagnola",
 		"tag.17.name": "Blocca-annunci specifico per la lingua spagnola"
 	},
 	{
-		"tag.18.description": "Progettato appositamente per bloccare annunci su pagine web in lingua portoghese",
+		"tag.18.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua portoghese",
 		"tag.18.name": "Blocca-annunci specifico per lingua portoghese"
 	},
 	{
-		"tag.19.description": "Progettato appositamente per bloccare annunci e traccianti su dispositivi mobili",
+		"tag.19.description": "Progettato specificatamente per il blocco degli annunci e tracciatori sui dispositivi mobili",
 		"tag.19.name": "Per dispositivi mobili"
 	},
 	{
@@ -104,7 +104,7 @@
 		"tag.21.name": "Specifico per iOS"
 	},
 	{
-		"tag.22.description": "Progettato appositamente per funzionare con i blocchi di contenuto del browser Safari",
+		"tag.22.description": "Progettato specificatamente per funzionare con i blocchi di contenuto su browser Safari",
 		"tag.22.name": "Specifico per Safari"
 	},
 	{
@@ -112,19 +112,19 @@
 		"tag.23.name": "Compatibilità"
 	},
 	{
-		"tag.24.description": "Progettato appositamente per bloccare gli annunci nelle pagine web in lingua turca",
+		"tag.24.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua turca",
 		"tag.24.name": "Blocca-annunci specifico per la lingua turca"
 	},
 	{
-		"tag.25.description": "Ha riferimenti al filtro Protezione Antitracciamento",
-		"tag.25.name": "Riferimento del filtro Protezione Antitracciamento"
+		"tag.25.description": "Ha riferimenti al filtro Protezione Anti-Monitoraggio",
+		"tag.25.name": "Riferimento del filtro Protezione Anti-Monitoraggio"
 	},
 	{
-		"tag.26.description": "Ha riferimenti al filtro Annunci Mobili",
-		"tag.26.name": "Riferimento filtro per Annunci Mobili"
+		"tag.26.description": "Ha riferimenti al filtro Annunci per Dispositivi",
+		"tag.26.name": "Riferimento al filtro Annunci per Dispositivi"
 	},
 	{
-		"tag.27.description": "Progettato appositamente per bloccare gli annunci sulle pagine web in lingua francese",
+		"tag.27.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua francese",
 		"tag.27.name": "Blocca-annunci specifico per la lingua francese"
 	},
 	{
@@ -132,59 +132,59 @@
 		"tag.28.name": "Riferimento al filtro Liste FR"
 	},
 	{
-		"tag.31.description": "Progettato appositamente per bloccare gli annunci su pagine web in lingua cinese",
+		"tag.31.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua cinese",
 		"tag.31.name": "Blocca-annunci specifico per la lingua cinese"
 	},
 	{
-		"tag.32.description": "Progettato appositamente per bloccare gli annunci sulle pagine web in lingua ceca",
+		"tag.32.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua ceca",
 		"tag.32.name": "Blocca-annunci specifico per la lingua ceca"
 	},
 	{
-		"tag.33.description": "Progettato appositamente per bloccare gli annunci sulle pagine web in lingua slovacca",
+		"tag.33.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua slovacca",
 		"tag.33.name": "Blocca-annunci specifico per la lingua slovacca"
 	},
 	{
-		"tag.34.description": "Progettato appositamente per bloccare gli annunci sulle pagine web in lingua ebraica",
+		"tag.34.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua ebraica",
 		"tag.34.name": "Blocca-annunci specifico per lingua ebraica"
 	},
 	{
-		"tag.35.description": "Progettato appositamente per bloccare gli annunci su pagine web in lingua italiana",
+		"tag.35.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua italiana",
 		"tag.35.name": "Blocca-annunci specifico per lingua italiana"
 	},
 	{
-		"tag.36.description": "Progettato appositamente per bloccare gli annunci nelle pagine web in lingua lettone",
+		"tag.36.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua lettone",
 		"tag.36.name": "Blocca-annunci specifico per lingua lettone"
 	},
 	{
-		"tag.37.description": "Progettato appositamente per bloccare gli annunci nelle pagine web in lingua lituana",
+		"tag.37.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua lituana",
 		"tag.37.name": "Blocca-annunci specifico per lingua lituana"
 	},
 	{
-		"tag.38.description": "Progettato appositamente per bloccare gli annunci su pagine web in lingua araba",
+		"tag.38.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua araba",
 		"tag.38.name": "Blocca-annunci specifico per lingua araba"
 	},
 	{
-		"tag.39.description": "Progettato appositamente per bloccare gli annunci sulle pagine web in lingua rumena",
+		"tag.39.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua rumena",
 		"tag.39.name": "Blocca-annunci specifico per lingua rumena"
 	},
 	{
-		"tag.40.description": "Progettato appositamente per bloccare gli annunci nelle pagine web in lingua finlandese",
+		"tag.40.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua finlandese",
 		"tag.40.name": "Blocca-annunci specifico per lingua finlandese"
 	},
 	{
-		"tag.41.description": "Progettato appositamente per bloccare gli annunci su pagine web in lingua polacca",
+		"tag.41.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua polacca",
 		"tag.41.name": "Blocca-annunci specifico per lingua polacca"
 	},
 	{
-		"tag.42.description": "Progettato appositamente per bloccare gli annunci nelle pagine web in lingua islandese",
+		"tag.42.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua islandese",
 		"tag.42.name": "Blocca-annunci specifico per lingua islandese"
 	},
 	{
-		"tag.43.description": "Progettato appositamente per bloccare gli annunci sulle pagine web in lingua norvegese",
+		"tag.43.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua norvegese",
 		"tag.43.name": "Blocca-annunci specifico per lingua norvegese"
 	},
 	{
-		"tag.44.description": "Progettato appositamente per bloccare gli annunci su pagine web in lingua greca",
+		"tag.44.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua greca",
 		"tag.44.name": "Blocca-annunci specifico per lingua greca"
 	},
 	{
@@ -196,15 +196,15 @@
 		"tag.46.name": "Obsoleto"
 	},
 	{
-		"tag.47.description": "Progettato appositamente per bloccare gli annunci sulle pagine web in lingua ceca",
+		"tag.47.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua ceca",
 		"tag.47.name": "Blocca-annunci specifico per lingua ceca"
 	},
 	{
-		"tag.48.description": "Progettato appositamente per bloccare gli annunci su pagine web in lingua ungherese",
+		"tag.48.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua ungherese",
 		"tag.48.name": "Blocca-annunci specifico per lingua ungherese"
 	},
 	{
-		"tag.49.description": "Progettato appositamente per bloccare gli annunci nelle pagine web in lingua danese",
+		"tag.49.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua danese",
 		"tag.49.name": "Blocca-annunci specifico per lingua danese"
 	},
 	{
@@ -216,23 +216,23 @@
 		"tag.51.name": "Blocco degli avvisi sui cookie"
 	},
 	{
-		"tag.52.description": "Progettato appositamente per bloccare gli annunci sulle pagine web in lingua vietnamita",
+		"tag.52.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua vietnamita",
 		"tag.52.name": "Blocca-annunci specifico per lingua vietnamita"
 	},
 	{
-		"tag.53.description": "Progettato appositamente per bloccare gli annunci nelle pagine web in lingua estone",
+		"tag.53.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua estone",
 		"tag.53.name": "Blocca-annunci specifico per lingua estone"
 	},
 	{
-		"tag.54.description": "Progettato appositamente per bloccare gli annunci su pagine web in lingua persiana",
+		"tag.54.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua persiana",
 		"tag.54.name": "Blocca-annunci specifico per lingua persiana"
 	},
 	{
-		"tag.55.description": "Progettato appositamente per bloccare gli annunci su pagine web in lingua svedese",
+		"tag.55.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua svedese",
 		"tag.55.name": "Blocca-annunci specifico per lingua svedese"
 	},
 	{
-		"tag.56.description": "Progettato appositamente per bloccare gli annunci su pagine web in lingua coreana",
+		"tag.56.description": "Progettato specificatamente per il blocco degli annunci su pagine web in lingua coreana",
 		"tag.56.name": "Blocca-annunci specifico per lingua coreana"
 	},
 	{
