--- a/locales/pt_BR/filters.json
+++ b/locales/pt_BR/filters.json
@@ -56,7 +56,7 @@
 		"filter.14.description": "Bloqueia elementos irritantes em sites, incluindo aviso de cookies, widgets de terceiros, anúncios e pop-ups."
 	},
 	{
-		"filter.15.name": "Filtro DNS do AdGuard",
+		"filter.15.name": "Filtro para AdGuard DNS",
 		"filter.15.description": "Filtro composto de vários outros filtros (filtro base do AdGuard, filtro para mídia social, filtro de proteção contra rastreamento, filtro para dispositivo móvel, EasyList e EasyPrivacy). Também contém domínios simplificados para uma melhor compatibilidade no bloqueio de anúncios de nível DNS."
 	},
 	{
