--- a/locales/sk/filters.json
+++ b/locales/sk/filters.json
@@ -265,7 +265,7 @@
 	},
 	{
 		"filter.232.name": "KAD - Anti-Scam",
-		"filter.232.description": "Filter, ktorý chráni pred rôznymi typmi podvodov, ako sú hromadné textové správy, falošné online obchody atď."
+		"filter.232.description": "Filter, ktorý chráni pred rôznymi typmi podvodov v poľskej sieti, ako sú hromadné textové správy, falošné internetové obchody atď."
 	},
 	{
 		"filter.233.name": "Adblock List for Finland",
