--- a/locales/tr/filters.json
+++ b/locales/tr/filters.json
@@ -17,7 +17,7 @@
 	},
 	{
 		"filter.5.name": "AdGuard Deneysel filtresi",
-		"filter.5.description": "Temel filtrelere eklenmeden önce bazı tehlikeli filtreleme kurallarının test edilmesi için tasarlanmıştır."
+		"filter.5.description": "Temel filtrelere eklenmeden önce belirli tehlikeli filtreleme kurallarını test etmek için tasarlanmış filtre."
 	},
 	{
 		"filter.6.name": "AdGuard Almanca filtresi",
@@ -41,7 +41,7 @@
 	},
 	{
 		"filter.11.name": "AdGuard Mobil Reklam filtresi",
-		"filter.11.description": "Bilinen tüm mobil reklam ağları için filtre. Mobil aygıtlar için yararlıdır."
+		"filter.11.description": "Bilinen tüm mobil reklam ağları için filtre. Mobil cihazlar için kullanışlıdır."
 	},
 	{
 		"filter.12.name": "AdGuard Safari filtresi",
@@ -89,7 +89,7 @@
 	},
 	{
 		"filter.105.name": "EasyList Czech and Slovak",
-		"filter.105.description": "EasyList için Çekce ve Slovakça takviyesi."
+		"filter.105.description": "EasyList için Çekçe ve Slovakça takviyesi."
 	},
 	{
 		"filter.106.name": "EasyList Dutch",
