--- a/locales/tr/tags.json
+++ b/locales/tr/tags.json
@@ -56,7 +56,7 @@
 		"tag.10.name": "AdGuard'ın tavsiyesi"
 	},
 	{
-		"tag.5.description": "Sizi gerçek içerikten uzaklaştıran ancak reklam olmayan öğeleri (abonelik teklifleri, tanıtım bildirimleri vs.) engellemek için tasarlandı",
+		"tag.5.description": "Dikkatinizi içerikten uzaklaştıran reklam dışı öğeleri (abonelik teklifleri, tanıtım bildirimleri, vb.) engellemek için tasarlandı",
 		"tag.5.name": "Can sıkıcı öğelere karşı koruma"
 	},
 	{
@@ -117,7 +117,7 @@
 	},
 	{
 		"tag.25.description": "İzleme Koruması filtresini kaynak alır",
-		"tag.25.name": "Takip Engelleme filtre referansı"
+		"tag.25.name": "İzleme Koruması filtre referansı"
 	},
 	{
 		"tag.26.description": "Mobil Reklam filtresini kaynak alır",
@@ -136,8 +136,8 @@
 		"tag.31.name": "Çince diline özgü reklam engelleme"
 	},
 	{
-		"tag.32.description": "Çek dilindeki sitelerde reklamları engellemek için özel olarak tasarlandı",
-		"tag.32.name": "Çek diline özgü reklam engelleme"
+		"tag.32.description": "Çekçe dilindeki sitelerde reklamları engellemek için özel olarak tasarlandı",
+		"tag.32.name": "Çekçe diline özgü reklam engelleme"
 	},
 	{
 		"tag.33.description": "Slovakça sitelerdeki reklamları engellemek için özel olarak tasarlandı",
@@ -196,8 +196,8 @@
 		"tag.46.name": "Çok eski"
 	},
 	{
-		"tag.47.description": "Çekce sitelerdeki reklamları engellemek için özel olarak tasarlandı",
-		"tag.47.name": "Çekce diline özgü reklam engelleme"
+		"tag.47.description": "Çekçe sitelerdeki reklamları engellemek için özel olarak tasarlandı",
+		"tag.47.name": "Çekçe diline özgü reklam engelleme"
 	},
 	{
 		"tag.48.description": "Macarca sitelerdeki reklamları engellemek için özel olarak tasarlandı",
