--- a/locales/pt/filters.json
+++ b/locales/pt/filters.json
@@ -56,7 +56,7 @@
 		"filter.14.description": "Bloqueia elementos irritantes nas páginas da Web, incluindo avisos de cookies, widgets de terceiros e popups na página."
 	},
 	{
-		"filter.15.name": "Filtro DNS do AdGuard",
+		"filter.15.name": "Filtro para AdGuard DNS",
 		"filter.15.description": "Filtro composto por vários outros filtros (Base de filtros do AdGuard, filtro de Redes Sociais, filtro de proteção de nonitorização, filtro de anúncios para dispositivos móveis, EasyList e EasyPrivacy) e simplificado especificamente para haver maior compatibilidade com o bloqueio de anúncios ao nível do DNS."
 	},
 	{
