--- a/locales/sv/filters.json
+++ b/locales/sv/filters.json
@@ -56,7 +56,7 @@
 		"filter.14.description": "Blockerar irriterande element på webbsidor, inklusive cookiemeddelanden, tredjepartswidgetar och popup-fönster."
 	},
 	{
-		"filter.15.name": "AdGuards förenklade domännamnsfilter",
+		"filter.15.name": "AdGuard DNS-filter",
 		"filter.15.description": "Filter som kombinerar flera andra filter (AdGuards grundfilter, filter för sociala medier , spårningsfilter, filter för mobilannonser, EasyList och EasyPrivacy) och förenklade,  specifikt för förbättrad kompatibilitet med annonsblockering på DNS-nivå."
 	},
 	{
